<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillingActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:gravity="end">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/id_label_text_view"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/client_name_label_text_view"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_name_label_text_view"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/price_label_text_view"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/quantity_label_text_view"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="190dp"
                android:layout_height="300dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/id_update_edit_text"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:text="@string/id_update_edit_text"/>

                <EditText
                    android:id="@+id/client_name_update_edit_text"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/client_name_update_edit_text"/>

                <EditText
                    android:id="@+id/product_name_update_edit_text"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/product_name_update_edit_text"/>

                <EditText
                    android:id="@+id/price_update_edit_text"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/price_update_edit_text"/>

                <EditText
                    android:id="@+id/quantity_update_edit_text"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/quantity_update_edit_text"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/billing_update_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/billing_update_button"
            app:cornerRadius="5dp" />

    </LinearLayout>

</FrameLayout>